--- a/S19/170/170_02_S19_PS.HTM
+++ b/S19/170/170_02_S19_PS.HTM
@@ -26,6 +26,10 @@ A:visited {
 A:hover {
    text-decoration: underline;
    } 
+DO {
+   color: #336699; /* blue-grey */
+   text-decoration: none;
+   }
 D5 {
    color: #996633; /* brown */
    text-decoration: none;
@@ -63,7 +67,7 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 3/07/2019 1:39 pm)
+                              >(Last update: 3/21/2019 8:11 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -90,6 +94,45 @@ FOR INSTRUMENTATION AND AUTOMATION<BR>EGR 170-02<BR>
    <!-- Assignment -->
                </TD><TD align="center" valign="bottom"><small><b>
     Assignment                                       </b></small>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+  7
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        3/21
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/2481201/assignments/21575950"
+		>3/28</a>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        ---
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+		Topics:  NI LabVIEW introduction, loops, wave- <br>&nbsp;
+		                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+		         forms, data types, owned vs. free labels<br>&nbsp;
+		Read:  Essick, Chapters 1, 2, and 3.           <br>&nbsp;
+		                                               <br>&nbsp;
+		Do homework in <DO>Essick 4th ed.             <br>&nbsp;
+		    1.1,  <!-- Integer detector -->
+			1.3 (optional:  label the output "R1||R2" <br>&nbsp;
+			instead of "Equivalent Resistance."<!-- Foozlebang calculator -->
+			2.5, <!-- Metronome -->
+			2.7, <!-- While loop and wait to reduce CPU usage --><br>&nbsp;
+			3.3, <!-- FS of square wave --> 
+			3.9  <!-- Numeric integration -->
+			</DO>                                      <br>&nbsp;
+			                                           <br>&nbsp;
+			Note: Turn in a word-processor document    <br>&nbsp;
+			that has, for each assigned problem, the   <br>&nbsp;
+			problem statement, one or more screen-shots<br>&nbsp;
+			of the front panel to illustrate interesting<br>&nbsp;
+			case(s), and a screen-shot of the block diagram.<br>&nbsp;
+			Each problem should start at the top of a  <br>&nbsp;
+			page.  Additionally, your document should <br>&nbsp;
+			abide by other course <a href=
+			"https://dfdeboer.github.io/S19/HWSTDS19.HTM"
+			>standards</a> as usual.  
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  ---
