--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 10/01/2019 2:40 pm)
+                                >(Last update 10/10/2019 1:18 am)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -156,9 +156,9 @@ PS                                                           <BR>
         10/08
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp; <!-- <a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
-        title="Click to see solutions">2/01</a><br>
+        <a href=
+        "https://dordt.instructure.com/files/156520975/download?download_frd=1"
+        title="Click to see solutions">10/10</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Value Fixing, Vectors (Busses),        <br>&nbsp;
 		Decoders, Encoders, Multiplexers, partitioning <br>&nbsp;
@@ -202,7 +202,7 @@ PS                                                           <BR>
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
         <a href=
-        "https://dordt.instructure.com/files/156026152/download?download_frd=1"
+        "https://dordt.instructure.com/files/156479449/download?download_frd=1"
         title="Click to see solutions">10/03</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Decoders, Encoders                     <br>&nbsp;
