--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   2/08/2023 7:58 am)
+                              >(Last update:   2/08/2023 12:33 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -91,7 +91,7 @@ PS                                                       </small>
         2/03<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        <a href="https://dordt.instructure.com/courses/2899998/assignments/29348285"
+        <a href="https://dordt.instructure.com/courses/3642167/assignments/40407509"
 		>2/10</a><br>
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
