--- a/S23/304/304S23DN.HTM
+++ b/S23/304/304S23DN.HTM
@@ -163,17 +163,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/255124686/download?download_frd=1"><!-- -->
 	  2/06<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/255272804/download?download_frd=1"><!-- -->
-      2/08<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      2/10<!-- -></a><!-- --></td>
+      2/08<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/255439577/download?download_frd=1"><!-- -->
+      2/10<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=YC97Ru7ilnE">V</A><!-- --><br>
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=Tiy-a-NPNns">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=Tbkyg3o5iMs">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=9gVPK6-Gq74">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Differential and Single ended signaling, Intro A/D conversion<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment-->Anti-ailias filter, Nyquist sampling, Quantization & Coding in A/D conv.<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Techniques in measurment: Time, Temperature<!--end comment--></td>  
    </TR><!-- Week of 2/13 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -<a href=
