--- a/S23/304/304S23PS.HTM
+++ b/S23/304/304S23PS.HTM
@@ -53,7 +53,7 @@ DO {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/08/2023 9:44 am)
+                              >(Last update: 2/15/2023 12:09 pm)
 <!--  LAST UPDATE  - - - - - - - - - - - - - - - - - - - - -  -->
                                                  </DIV></TD></TR>
 </TABLE> 
@@ -89,7 +89,8 @@ DO {
         2/06
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        2/17
+        <a href="https://dordt.instructure.com/courses/3642050/assignments/40464227"
+		>2/20</a>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         &nbsp;<!--<a href=
@@ -132,7 +133,8 @@ DO {
         the "Torque Curves" tab.                       <br>&nbsp;
 		                                               <br>&nbsp;<small>
 		(On Wed. 2/08 the due date was changed</small> <br>&nbsp;<small>
-		from 2/10 to 2/17)</small>
+		from 2/10 to 2/17.  Then on 2/15 the due date was </small><br>&nbsp;<small>
+		futher delayed to 2/20.)
  		
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
 
