--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -179,17 +179,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/255581293/download?download_frd=1"><!-- -->
 	  2/13<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      2/15<!-- -></a><!-- --><br><!-- -<a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      2/17<!-- -</a><!-- --></td>
+      2/15<!-- -></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/255868373/download?download_frd=1"><!-- -->
+      2/17<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=SYgmfqa1ouU">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=2TSQNOGCuR0">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Properties of Fourier Series, Parseval's Theorem<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Test #1.</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Intro Fourier Transform, Quintessential Ex, Duality, 1 &harr; &delta;(<i>f</vi>) and &delta;(<i>t</vi>) &harr; 1<!--end comment--></td>  
    </TR><!-- Week of 2/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
