--- a/S23/304/304S23DN_InfinityFree.HTM
+++ b/S23/304/304S23DN_InfinityFree.HTM
@@ -246,19 +246,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
 	  "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0313.pdf"><!-- -->
-	  3/13<!-- -></a><!-- --><br><!-- -><a href=
+	  3/13<!-- -></a><!-- --><br><!-- --><a href=
       "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0315.pdf"><!-- -->
-      3/15<!-- -></a><!-- --><br><!-- -><a href=
+      3/15<!-- --></a><!-- --><br><!-- -><a href=
       "http://ddb.rf.gd/EGR304S23/SLIDES/304S23DN_0317.pdf"><!-- -->
       3/17<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=gA0f7kFJxuY">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=sa02-y3J2R0">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=Rp02gy8rj2M">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=Xi3yVnm9rTQ">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>No class, Spring Break.</font><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Meet via Zoom link in Canvas</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Meet via Zoom link in Canvas</font><!--end comment--></td>  
+      <!--Wednesday -->&nbsp;<!--start comment-->Course review, Memory types, Harvard v. Von Neuman, Char. of mem<!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Meet via Zoom</font><!--end comment--></td>  
    </TR><!-- Week of 3/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
@@ -273,7 +273,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=lhPnguezxr0">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=ZFfUx8S6fwo">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Meet via Zoom link in Canvas</font><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment--><font color=grey>Meet via Zoom</font><!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
