--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -245,18 +245,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- -><a href=
 	  "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-	  3/13<!-- -></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      3/15<!-- -></a><!-- --><br><!-- -><a href=
+	  3/13<!-- -></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/257356815/download?download_frd=1"><!-- -->
+      3/15<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       3/17<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=gA0f7kFJxuY">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=sa02-y3J2R0">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=VbE89Vk4dPY">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=Xi3yVnm9rTQ">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><font color=grey>No class, Spring Break.</font><!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><font color=grey>Prof. in Santa Barbara.  Meet via Zoom link in Canvas</font><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Detail on QAM; AM-stereo, NTSC (analog) color TV applications of QAM<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Prof. in Santa Barbara.  Meet via Zoom link in Canvas</font><!--end comment--></td>  
    </TR><!-- Week of 3/20 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
