--- a/S23/363/363S23DN.HTM
+++ b/S23/363/363S23DN.HTM
@@ -262,18 +262,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/257666592/download?download_frd=1"><!-- -->
-	  3/20<!-- --></a><!-- --><br><!-- -><a href=
-      "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
-      3/22<!-- -></a><!-- --><br><!-- -><a href=
+	  3/20<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/257798468/download?download_frd=1"><!-- -->
+      3/22<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files//download?download_frd=1"><!-- -->
       3/24<!-- -></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=PvU9enEVs1Q">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=lhPnguezxr0">V</A><!-- --><br>
+	  <!-- ->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=8TTSN1RGzok">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="https://www.youtube.com/watch?v=ZFfUx8S6fwo">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->FDM, TRF, Regenerative tuning, Superhetrodyne tuning<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Superheterodyne tuning in detail, Image and spurious frequencies<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 3/27 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
