--- a/S23/363/363S23PS.HTM
+++ b/S23/363/363S23PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update:   3/04/2023 3:59 pm)
+                              >(Last update:   3/24/2023 9:45 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,26 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+10
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        3/24<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href="https://dordt.instructure.com/courses/3642167/assignments/40745398"
+		>3/31</a><br>
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        <!--<a href=
+		"https://dordt.instructure.com/files/xx/download?download_frd=1"
+		>11/04</a><br>      
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  SSB, Hilbert Transform, VSB           <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+		         Superheterodyne tuning                <br>&nbsp;
+        Reveiw Ch 2, Sec. 2.3  Ch 3 Sec. 3.2.3 thru 3.3<br>&nbsp;
+		                                               <br>&nbsp;
+        Do <DO>2.51, 2.59.1, 3.24</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  9
